[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "beam-tracker-rl"
version = "0.1.0"
description = "Feedback-only Gymnasium environment for deterministic mmWave beam tracking."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=1.3.0",
    "numpy>=2.0",
]

[project.optional-dependencies]
ppo = [
    "stable-baselines3>=2.3.0",
    "matplotlib>=3.8",
    "ipykernel>=6.29",
]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["beam_tracker_rl*"]
